# JD-Curso_de_Python

./: .gitignore  README.md  git-inicial.sh  pyproject.toml
.githooks-scripts/: commit-msg
Aula-04/: exemplo_dict.py  exemplo_ler_arqs.py  exemplo_lista.py  exercicio.py  gustavo.py  main.py
app/libs/: common_functions.py  data.py  model.py
aula-02/: exercicio-02.py  exercicio-03.py
aula-03/: exercicio-01.py  exercicio-03.py  exercicio-05.py
dados/: aula-03-arq-log.txt  aula-03-exerc-05.txt  aula-04-dados.csv  ocorrencias_20260224_1507.csv  ocorrencias_20260224_1509.csv
tests/: test_convert_to_datetime.py  test_datetime.py
